feat: update lint configuration

--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "author": "戈洋洋 <ge_yangyang@126.com>",
   "license": "MIT",
   "scripts": {
-    "precommit": "lint-staged",
     "start": "athena start",
-    "prettier": "prettier --write \"**/*.{js,ts,jsx,less}\""
+    "lint": "eslint app.js src/**",
+    "lint-fix": "eslint --fix app.js src/**",
+    "precommit": "lint-staged",
+    "prettier": "prettier --write \"**/*.{js,ts,jsx}\""
   },
   "dependencies": {
     "@koa/cors": "^2.2.1",
@@ -21,17 +23,18 @@
     "request": "^2.87.0"
   },
   "devDependencies": {
-    "eslint": "^3.12.0",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "^2.13.0",
     "husky": "^0.14.3",
     "lint-staged": "^7.2.0",
     "prettier": "^1.13.7"
   },
   "lint-staged": {
-    "**/*.{js,ts,jsx,less}": [
-      "prettier --write",
-      "git add"
+    "**/*.{js,ts,jsx}": [
+      "lint",
+      "prettier --write"
     ]
   }
 }
