--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
   "dependencies": {
     "@koa/cors": "^2.2.1",
     "chalk": "^2.4.1",
+    "commander": "^2.16.0",
     "koa": "^2.5.1",
     "koa-body": "^4.0.4",
     "koa-error": "^3.2.0",
     "koa-logger": "^3.2.0",
+    "koa-router": "^7.4.0",
+    "mongodb": "^3.1.1",
+    "qs": "^6.5.2",
     "react-dev-utils": "^5.0.1",
     "request": "^2.87.0"
   },
