--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "ejs": "^2.6.1",
     "koa": "^2.5.1",
     "koa-body": "^4.0.4",
+    "koa-ejs": "^4.1.2",
     "koa-error": "^3.2.0",
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
     "koa-views": "^6.1.4",
     "mongodb": "^3.1.1"
   },
